= Version descriptions

== master

- Tested on Android 11
- Removed not needed custom fonts, now using default regular/bold fonts from the system

== 7.0.1

- Fix missing localization of the notification channel's name
- Updated appcompat, constraintlayout, material, junit and espress-core to latest versions

== 7.0.0

- Resolves: gh#28 it is now possible to rate sleeps
- Resolves: gh#7 expand/collapse FAB on scroll

== 6.4

- Resolves: gh#27 improve main activity FAB color in dark mode
- Added Spannish translation (Diego Sanguinetti)
- Resolves: gh#6 next to all-time stats, there are now "last 7 days" and "this year" stats as well
- Related: gh#1 Cannot import csv after export, improved fix for less mainstream Android flavors
  (Sebastian Zeller)

== 6.3

- Resolves: gh#21 daily average now detects completely skipped days
- Resolves: gh#20 sleep entries are now being sorted in chronological order (Sebastian Zeller)
- Resolves: gh#19 in the sleep edit time picker, use 24 or 12 hour view according to system settings
  (Sebastian Zeller)
- Resolves: gh#16 support dark mode (martiandolphin)

== 6.2

- Resolves: gh#15 export format is now better documented
- Resolves: gh#14 main view: sleep counter is now less confusing for multiple sleeps / day
- Resolves: gh#13 main view: scroll the content above the recycler view
- Resolves: gh#8 main view: the snackbar and the start/stop button doesn't overlap anymore

== 6.1

- Resolves: gh#11 use different colors for start and stop
- Much improved design (Sanju S)
- Resolves: gh#5 Main view: average of daily sum of sleeps is now visible

== 6.0

- Main view: the sleep list now has a scrollbar
- Sleep view: now shows the ID and has a back button

== 5.0

- Resolves: gh#2 Allow the user to manually edit an entry

== 4.0

- App metadata now features a screenshot
- Added an about dialog to credit used libraries
- Now never performing database operations on the main thread
- Resolves: gh#1 Cannot import csv after export

== 3.0
